# tank-royale

./: .devcontainer.json  .editorconfig  .getattributes  .gitattributes  .gitignore  .markdown-link-check.json  .principles  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  ISSUE-202-FINDINGS.md  README.md  REVIEW.md  SIGNING-ACTION-PLAN.md  TODO.md  VERSIONS.MD  VERSIONS.md  audit-output.json  build.gradle.kts  deploy-sample-bots.ps1  deploy-sample-bots.sh  gradle.properties  groovy.gradle  jpackage-execution-plan.md  package-lock.json  package.json  proguard-common.pro  publish.md  release.md  settings.gradle  settings.gradle.kts
.ai/: MAINTENANCE.md  README.md  architecture.md  (+8 more)
bot-api/python/: .gitignore  MANIFEST.in  PyPi-ReadMe.md  README-PyPI.md  README.md  build.gradle.kts  check_firepower.py  check_params.py  prepare.sh  pyproject.toml  requirements-test.txt  requirements.txt  schema_to_python.py  setup.py  test_debug.py  test_imports.py  test_simple.txt  test_stdout_capture_flow.py  test_stdout_debug.txt  test_stdout_simple.py
bot-api/python/scripts/: create-venv.ps1  create-venv.sh  schema_to_python.py  update_version.py
bot-api/python/sphinx/: conf.py  index.rst
bot-api/python/src/robocode/tank_royale/bot_api/: abstract_base_bot.py  initial_position.py
bot-api/python/src/robocode_tank_royale-stubs/: .gitignore
bot-api/python/src/robocode_tank_royale/bot_api/: __init__.py  abstract_base_bot.py  base_bot.py  base_bot_abc.py  base_bot_abs.py  bot.py  bot_abc.py  bot_exception.py  bot_info.py  bot_results.py  bot_state.py  bullet_state.py  color.py  constants.py  default_event_priority.py  droid_abc.py  game_setup.py  game_type.py  initial_position.py  team_message.py
bot-api/python/src/robocode_tank_royale/bot_api/events/: __init__.py  bot_death_event.py  bot_event.py  bullet_fired_event.py  bullet_hit_bot_event.py  bullet_hit_bullet_event.py  bullet_hit_wall_event.py  condition.py  connected_event.py  connection_error_event.py  connection_event.py  custom_event.py  death_event.py  disconnected_event.py  event_abc.py  game_ended_event.py  game_started_event.py  hit_bot_event.py  hit_by_bullet_event.py  hit_wall_event.py  round_ended_event.py  round_started_event.py  scanned_bot_event.py  skipped_turn_event.py  team_message_event.py  tick_event.py  won_round_event.py
bot-api/python/src/robocode_tank_royale/schema/: __init__.py
bot-api/python/src/tank_royale.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bot-api/python/src/tank_royale/bot_api/: bot_results.py  bot_state.py  bullet_state.py
bot-api/python/tests/: README.md  StdoutTestBot.py  __init__.py  conftest.py  test_base_bot.py  test_imports.py  test_recording_text_writer.py  test_shared.py  test_stdout_capture.py  test_stdout_integration.py
bot-api/python/tests/bot_api/: abstract_bot_test.py  test_base_bot_constructor.py  test_base_bot_precedence.py  test_base_bot_state.py  test_base_bot_type_parsing.py  test_bot.py  test_bot_run_first_turn.py  test_commands_fire.py  test_commands_movement.py  test_commands_radar.py  test_constants.py  test_data_models.py  test_env_vars.py  test_mocked_server.py  test_mocked_server_enhancement.py  test_protocol_conformance.py  test_team_message_realistic.py  test_team_message_serialization.py  test_won_round_event.py
bot-api/python/tests/bot_api/events/: test_events.py
bot-api/python/tests/bot_api/graphics/: test_color.py  test_point.py  test_svg_graphics.py
bot-api/python/tests/bot_api/internal/: test_base_bot_internals.py  test_json_util_schema.py
bot-api/python/tests/bot_api/util/: test_color_util.py  test_country_code_util.py  test_json_util.py
bot-api/python/tests/bot_api/value/: test_bot_info.py  test_initial_position.py
bot-api/python/tests/test_utils/: __init__.py  abstract_bot_test.py  mocked_server.py  team_message_types.py  test_bot_factory.py  test_bot_factory_test.py  test_cross_language_verification.py  test_mocked_server.py
(+7396 files in other folders)
