[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "robocode-tank-royale"
description = "Python Bot API for Robocode Tank Royale"
readme = "README-PyPI.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console"
]

# Using setup.py to supply dependencies and version dynamically
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["src", "generated/robocode_tank_royale/tank_royale"]

maintainers = [
    {name = "Yang Li", url = "https://github.com/yangli2"},
    {name = "Maintainer Two", url = "https://github.com/flemming-n-larsen"}
]

[project.urls]
Homepage = "https://robocode-dev.github.io/tank-royale"
