[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "robocode-tank-royale"
description = "Python Bot API for Robocode Tank Royale"
readme = "README-PyPI.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console"
]

# Using setup.py to supply dependencies and version dynamically
dynamic = ["version", "dependencies"]

maintainers = [
    {name = "Yang Li"},
    {name = "Flemming N. Larsen"}
]

[tool.setuptools.packages.find]
where = ["src", "generated"]

[tool.pytest.ini_options]
# Global timeout of 30 seconds for all tests to prevent hangs (10s was too short under Gradle parallel build load)
timeout = 30
# Use thread method for cross-platform compatibility (works on Windows)
timeout_method = "thread"
markers = [
    "VAL: Validation tests (BotInfo, constants, initial position)",
    "CMD: Command tests (fire, movement, radar)",
    "TCK: Protocol conformance / tick lifecycle tests",
    "BOT: Bot constructor and lifecycle tests",
    "UTL: Utility tests (color util, country code, JSON)",
    "GFX: Graphics tests (color, SVG, point)",
    "Reliability: Stress and thread-safety tests",
    "LEGACY: Legacy tests to be replaced by shared definitions (ADR-0038)",
]

[project.urls]
Homepage = "https://robocode-dev.github.io/tank-royale"
